fix: fix columns alignment on mobile

--- a/src/components/Blocks/Columns/Columns.module.css
+++ b/src/components/Blocks/Columns/Columns.module.css
@@ -1,5 +1,6 @@
 .columns {
   display: flex;
+  align-items: center;
 
   &.columns__is-stacked {
     flex-direction: column;
